--- a/README.Rmd
+++ b/README.Rmd
@@ -15,41 +15,42 @@ knitr::opts_chunk$set(
 
 # CLARITY
 
-<!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-<!-- badges: end -->
+*CLARITY*: An R Shiny app for an interactive exploration of breed-specific genetic maps in cattle
 
-The goal of CLARITY is to ...
+## Background 
+The arrangement of markers on the genome can be defined in either physical or linkage terms. While a physical map represents the inter-marker distances in base pairs, a genetic (or linkage) map pictures the recombination rate between pairs of markers. High-resolution genetic maps are key elements for genomic research, such as fine-mapping of quantitative trait loci, but they are also needed for creating and updating chromosome-level assemblies of whole-genome sequences. 
+
+## Objectives
+Based on published results on a large pedigree of German Holstein cattle, we aim at providing a platform that allows users to interactively explore the bovine genetic and physical map. We developed the R Shiny app *CLARITY* that provides access to the genetic map built on the Illumina Bovine SNP50 genotyping array with markers ordered according to the physical coordinates of the most recent bovine genome assembly ARS-UCD1.2. The user is able to interconnect the physical and genetic map for a whole chromosome or a specific chromosomal region and can inspect a landscape of recombination hotspots. Moreover, the user can investigate which of the frequently used genetic-map functions locally fits best. We further provide auxiliary information about markers being putatively misplaced in the ARS-UCD1.2 release. The corresponding output tables and figures can be downloaded in various formats. We are working on integrating data from different breeds to facilitate comparison of different genome features and to promote this app for education and research purposes.
+
+In this package version, only Holstein data can be investigated (more data are underway).
+
+
+Key features:
+
+* Summary statistics for all chromosomes
+* Genetic map
+* Misplaced markers
+* Hotspot detection
+* Genetic-map functions
+
+
 
 ## Installation
 
-You can install the development version of CLARITY like so:
+To get the current development version of CLARITY from github, please type:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+# install.packages("devtools")
+devtools::install_github("nmelzer/CLARITY")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+To start the R Shiny app, please type:
 
 ```{r example}
 library(CLARITY)
-## basic example code
+run_app()
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
