--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "*CLARITY*: A Shiny app for interactive visualisation of the bovine physical-genetic map"
 author: "N. Melzer, D. Wittenburg"
-date: "(September 30, 2025)"
+date: "(December 18, 2025)"
 output: 
  github_document
 ---
@@ -22,6 +22,8 @@ knitr::opts_chunk$set(
 ## Source
 
 An online version of CLARITY is available at https://nmelzer.shinyapps.io/clarity/
+
+A pipeline for creating a breed-specific genetic map from genotypes of half-siblings is available at <https://github.com/wittenburg/hsrecombi> ([v2.0.1](https://doi.org/10.5281/zenodo.17962688))
 
 
 ## Background 
@@ -66,8 +68,8 @@ Key features:
 To get the current development version of CLARITY from github, please type:
 
 ```{r install}
-# install.packages("devtools")
-devtools::install_github("nmelzer/CLARITY")
+# install.packages("remotes") (if not installed)
+remotes::install_github("nmelzer/CLARITY")
 ```
 
 ## Example
@@ -79,7 +81,14 @@ library(CLARITY)
 run_app()
 ```
 
-## Acknowledgement
-This work was supported by the grant from the German Federal Ministry of Education and Research (BMBF,  [FKZ031L0166 CompLS](https://www.gesundheitsforschung-bmftr.de/de/clarity-die-entwicklung-einer-kombinierten-physisch-genetischen-karte-fur-eine-9212.php)).
 
+## Cite
+Code and app (v3.0.0): [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.11620801.svg)](https://doi.org/10.5281/zenodo.11620801) 
+
+Data (v2.0): [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.17909700.svg)](https://doi.org/10.5281/zenodo.17909700)
+ 
+
+
+### Note
+The data in CLARITY [v2.0.0](https://github.com/nmelzer/CLARITY/tree/v2.0.0) was still in the development phase and should not be used.
 
